feat: add message_id filter to list_chat
