# docs/swagger.json
@@ -231,6 +231,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "Filter by message ID",
+                        "name": "message_id",
+                        "in": "query"
+                    },
+                    {
                         "type": "boolean",
                         "description": "Filter only archived chats",
                         "name": "only_archived",
